package theory.structural.facade.withFacade;

public class BookMyshow {

    public void findMovieTickets(){
        System.out.println("Finding movie tickets from BookMyShow");
    }
}
