package theory.structural.facade.withFacade;

public class GoIbibo {

    public void getTickets(){
        System.out.println("Getting Tickets fromm GoIbibo");
    }
}
