package theory.structural.facade.withFacade;

public class MakeMyTrip {

    public void getTickets(){
        System.out.println("Getting Tickets fromm MakeMyTrip");
    }
}
