@startuml

title __WITHFACADE's Class Diagram__\n

  namespace theory.structural.facade.withFacade {
    class theory.structural.facade.withFacade.AirTicketFacade {
        + AirTicketFacade()
        + findFlightTickets()
    }
  }
  

  namespace theory.structural.facade.withFacade {
    class theory.structural.facade.withFacade.BookMyshow {
        + findMovieTickets()
    }
  }
  

  namespace theory.structural.facade.withFacade {
    class theory.structural.facade.withFacade.Booking {
        + Booking()
        + findAirLineTickets()
        + findMovieTickets()
    }
  }
  

  namespace theory.structural.facade.withFacade {
    class theory.structural.facade.withFacade.GoIbibo {
        + getTickets()
    }
  }
  

  namespace theory.structural.facade.withFacade {
    class theory.structural.facade.withFacade.Main {
        {static} + main()
    }
  }
  

  namespace theory.structural.facade.withFacade {
    class theory.structural.facade.withFacade.MakeMyTrip {
        + getTickets()
    }
  }
  

  namespace theory.structural.facade.withFacade {
    class theory.structural.facade.withFacade.MovieTicketFacade {
        + MovieTicketFacade()
        + findMovieTickets()
    }
  }
  

  theory.structural.facade.withFacade.AirTicketFacade o-- theory.structural.facade.withFacade.GoIbibo : goIbibo
  theory.structural.facade.withFacade.AirTicketFacade o-- theory.structural.facade.withFacade.MakeMyTrip : makeMyTrip
  theory.structural.facade.withFacade.Booking o-- theory.structural.facade.withFacade.AirTicketFacade : airTicketFacade
  theory.structural.facade.withFacade.Booking o-- theory.structural.facade.withFacade.MovieTicketFacade : movieTicketFacade
  theory.structural.facade.withFacade.MovieTicketFacade o-- theory.structural.facade.withFacade.BookMyshow : bookMyshow


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
